// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";
import "./ClcwSegmentMask.proto";
import "./IfQueueElement.proto";
import "./DecoderType.proto";
import "./ModeType.proto";
import "./TerminateType.proto";

package cop1.protobuf;

message COP1IfAutoState {
extensions 25 to 125;

  optional cop1.protobuf.ModeType mode = 1;
  optional cop1.protobuf.DecoderType decoder = 2;
  optional ccsds_mal.protobuf.BOOLEAN controle_BD = 3;
  optional ccsds_mal.protobuf.INTEGER N_R = 4;
  optional ccsds_mal.protobuf.INTEGER initiate_type = 5;
  optional ccsds_mal.protobuf.INTEGER N_R_other_VC = 6;
  optional ccsds_mal.protobuf.INTEGER initiate_type_other = 7;
  repeated cop1.protobuf.IfQueueElement ifQueue = 8;
  optional ccsds_mal.protobuf.INTEGER N_R_alert = 9;
  optional ccsds_mal.protobuf.INTEGER nb_emission_try = 10;
  optional ccsds_mal.protobuf.INTEGER operator_request = 11;
  optional ccsds_mal.protobuf.INTEGER tm_hole_flag = 12;
  optional ccsds_mal.protobuf.INTEGER nb_perturbation = 13;
  optional ccsds_mal.protobuf.INTEGER last_farm_B_counter = 14;
  optional ccsds_mal.protobuf.INTEGER satellite_indice = 15;
  optional ccsds_mal.protobuf.BOOLEAN authentication_flag = 16;
  optional ccsds_mal.protobuf.INTEGER last_acknowledged_element = 17;
  optional ccsds_mal.protobuf.INTEGER emission_flag = 18;
  optional ccsds_mal.protobuf.INTEGER nb_unit = 19;
  optional ccsds_mal.protobuf.INTEGER action_type = 20;
  optional ccsds_mal.protobuf.INTEGER previous_action = 21;
  optional cop1.protobuf.TerminateType terminate_type = 22;
  optional cop1.protobuf.ClcwSegmentMask clcw_mask = 23;
  optional ccsds_mal.protobuf.INTEGER next_segment_index = 24;
}
