// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";



package cop1.protobuf;

message COP1WaitQueue {
extensions 4 to 104;

  optional ccsds_mal.protobuf.INTEGER internal_id = 1;
  optional ccsds_mal.protobuf.BLOB frame_data = 2;
  optional ccsds_mal.protobuf.FLOAT reemission_delay = 3;
}
